clear overflow issue when too many attrs to show on the screen

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -106,11 +106,12 @@ body {
     .wrapper-left {
       visibility: hidden;
       max-width: 10vw;
-      min-height: 70%;
+      max-height: 70vh;
       padding: 1%;
       align-self: center;
       background-color: darkgrey;
       border-radius: 5%;
+      overflow: auto;
       select {
         width: 50%;
         display: flex;
